--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 body{
     background-color:#4B9CD3;
+    color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    color:white;
+    text-align: center;
+    
 }
