--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,98 @@ body{
     background-color:#4B9CD3;
     color:white;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    
 }
 
-h1{
-    color:white;
-    text-align: center;
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
     
+}
+h1{ margin-top: 5%;
+    color:silver;
+    text-align: center;
+    font-size: 50px;
+    
+}
+#rock {
+    background: no-repeat url("../images/Stone.svg");
+    width: 100px;
+    height:100px;
+    border-style: none;
+    margin: 3em;
+    
+}
+#paper {
+    background: no-repeat url("../images/1579432908Scroll.svg");
+    width: 100px;
+    height:100px;
+    border-style: none;
+    background-size: cover;
+    margin: 3em;
+}
+#scissors {
+    background: no-repeat url("../images/edit-cut.svg");
+    width: 100px;
+    height:100px;
+    border-style: none;
+    background-size: cover;
+    margin: 3em;
+}
+
+.play-again{
+   
+    background: url("../images/rodentia-icons_video-x-generic.svg");
+    width: 100px;
+    height:100px;
+    background-size: cover;
+    border-style: none;
+
+}
+
+button:focus{
+    transform: scale(1.2)
+}
+
+.players, .current-score, .picks{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    
+}
+
+.scoreboard{
+    width: 100%;
+    
+}
+
+#result{
+    text-align: center;
+    font-size: 18px;
+    
+}
+.picks{
+    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.rounds{
+    display: flex;
+    justify-content:space-between;
+    width: 80%;
+}
+
+.buttons{
+    display: flex;
 }
